# davinci-ffmpeg-encoder

./: CMakeLists.txt  README.md  aac_encoder.cpp  aac_encoder.h  av1_encoder.cpp  av1_nvenc_encoder.cpp  encoder_info.h  ffmpeg_encoder.cpp  h264_encoder.cpp  h264_nvenc_encoder.cpp  h265_encoder.cpp  h265_nvenc_encoder.cpp  plugin.cpp  svt_av1_encoder.cpp  uisettings_controller.cpp  uisettings_controller.h  x264_encoder.cpp  x265_encoder.cpp
.github/workflows/: W-build-static.yml  build-static.yml  build.yml
